--- a/metadata.yaml
+++ b/metadata.yaml
@@ -12,8 +12,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-homepage: "https://www.example.com"
-documentation: "https://www.example.com/documentation"
+homepage: "https://aaanow.ai/"
+documentation: "https://github.com/unceasing-dev/aaanow-gtm-template"
 versions:
-  - sha: 5f02a788b90ae804f86b04aa24af8937e567874a
+  - sha: 67851e37817caa10749ed2b696b1d31fa1e90db9
     changeNotes: Initial Version
